--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,9 @@
-h1{
+h1 {
     color: #27c99a;
     font-family: "Playfair Display", serif;
 }
 
-body{
+body {
     background-image: url('images/compute-ea4c57a4.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -11,29 +11,27 @@ body{
     background-position: center;
 }
 
-p{
+p {
     background: linear-gradient(to left, #55a4c5, whitesmoke) no-repeat fixed;
     font-family: 'Playfair Display', serif;
-    font-size: 50px;
-    text-align: center;
+    font-size: 45px;
+    text-align: left;
+    top: 10px
 }
 
-.p2{
-    color: white;
+p2 {
+    color: #0c3777;
     border-top: #55a4c5;
-    text-align: center;
+    text-align: left;
     font-family: 'Playfair Display', serif;
-    font-size: 70px;
+    font-size: 40px;
     border-radius: 40px;
-    top: 0;
-
-
 }
 
 form {
     width: 100%;
     max-width: 800px;
-    margin:  auto;
+    margin: auto;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 16px;
@@ -81,39 +79,43 @@ form input[type="submit"]:hover {
 }
 
 .button-9 {
-      appearance: menulist-button;
-      backface-visibility: hidden;
-      border-radius: 6px;
-      border-width: 0;
-      box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
-      box-sizing: border-box;
-      cursor: pointer;
-      font-family: 'Playfair Display', serif;
-      font-size: 130%;
-      height: 44px;
-      line-height: 2;
-      margin: 12px 0 0;
-      outline: none;
-      overflow: hidden;
-      padding: 0 25px;
-      position: relative;
-      text-align: center;
-      text-transform: none;
-      transform: translateZ(0);
-      transition: all .2s,box-shadow .08s ease-in;
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-      width: 25%;
-      background: linear-gradient(to left, #55a4c5, whitesmoke) no-repeat fixed;
+    appearance: menulist-button;
+    backface-visibility: hidden;
+    border-radius: 6px;
+    border-width: 0;
+    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .1) 0 2px 5px 0, rgba(0, 0, 0, .07) 0 1px 1px 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-family: 'Playfair Display', serif;
+    font-size: 130%;
+    height: 44px;
+    line-height: 2;
+    margin: 12px 0 0;
+    outline: none;
+    overflow: hidden;
+    padding: 0 25px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transform: translateZ(0);
+    transition: all .2s, box-shadow .08s ease-in;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 25%;
+    background: linear-gradient(to left, #55a4c5, whitesmoke) no-repeat fixed;
+}
+
+p {
+    margin-top: 10px;
 }
 
 .button-9:disabled {
-  cursor: default;
+    cursor: default;
 }
 
 .button-9:focus {
-  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
 }
 
 fieldset {
@@ -176,7 +178,7 @@ legend {
 }
 
 .comment-author {
-        text-align: left;
+    text-align: left;
     font-weight: bold;
     margin-bottom: 5px;
 }
@@ -191,5 +193,23 @@ legend {
 }
 
 .form-inline div {
-        margin-bottom: 0;
+    margin-bottom: 0;
+}
+
+.top-left-message {
+    position: fixed; /* Фиксира съобщението на екрана, дори при скрол */ /* Разстояние от горната част на страницата */
+    right: 10px; /* Разстояние от лявата страна на страницата */
+    color: white; /* Бял текст */
+    padding: 5px 10px; /* Вътрешни отстъпи за по-добра четимост */
+    font-size: 1.2em; /* Размер на текста */
+/
+}
+
+.h1-title {
+    text-align: right;
+    margin: 0;
+    padding: 2px;
+    color: #0572ba;
+    font-family: 'Playfair Display', serif;
+
 }
