--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -3,31 +3,50 @@
 <nav class="navbar">
     <ul>
         <li>
-            <a href="#">Home</a>
-            <i class='bx bx-home' ></i>
+            <a href="{% url 'index' %}">
+                Home
+                <i class='bx bx-home'></i>
+            </a>
+        </li>
+
+
+        <li>
+            <a href="#">Profile
+                <i class='bx bx-user'></i>
+            </a>
         </li>
         <li>
-            <a href="#">Profile</a>
-            <i class='bx bx-user'></i>
+            <a href="#">Task
+                <i class='bx bx-task'></i>
+            </a>
         </li>
         <li>
-            <a href="#">Task</a>
-            <i class='bx bx-task' ></i>
-        </li>
-        <li>
-            <a href="#">About</a>
-            <i class='bx bx-info-square' ></i>
+            <a href="#">About
+                <i class='bx bx-info-square'></i>
+            </a>
         </li>
         {% if not request.user.is_authenticated %}
             <li>
-                <a href="#">Login</a>
-                <i class='bx bx-lock'></i>
+                <a href="{% url 'login' %}">Login
+                    <i class='bx bx-lock'></i>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'register' %}">Register
+                    <i class='bx bx-right-arrow-alt'></i>
+                </a>
             </li>
         {% else %}
             <li>
-                <a href="#">Logout</a>
-                <i class='bx bxs-left-arrow-square'></i>
+                <a href="{% url 'logout' %}" onclick="event.preventDefault(); document.getElementById('logout-form').submit()" class="menu-link"> Logout
+                    <i class='bx bxs-left-arrow-square'></i>
+                </a>
             </li>
         {% endif %}
     </ul>
 </nav>
+
+
+<form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
+    {% csrf_token %}
+</form>
